--- a/lib/css/wp-topbar-admin.css
+++ b/lib/css/wp-topbar-admin.css
@@ -6,6 +6,10 @@
 
 .ui-button-wptb {padding:.2em .2em}
 
+
+.ui-slider-handle {position:absolute;z-index:1;width:1.2em;height:1.2em;cursor:default} !important
+
+
 /* fix to bug in wordpress that causes button clicks in most browswers to scroll page to top
 	see http://core.trac.wordpress.org/ticket/23684
 */
