--- a/lib/css/wp-topbar-admin.css
+++ b/lib/css/wp-topbar-admin.css
@@ -4,15 +4,7 @@
 	
 */
 
-.ui-button-wptb {padding:.2em .2em}
 
-
-.ui-slider-handle {position:absolute;z-index:1;width:1.2em;height:1.2em;cursor:default} !important
-
-
-/* fix to bug in wordpress that causes button clicks in most browswers to scroll page to top
-	see http://core.trac.wordpress.org/ticket/23684
-*/
 .screen-reader-text,.screen-reader-text span,.ui-helper-hidden-accessible {
 position:fixed;
 left:1em;
@@ -21,4 +13,15 @@ height:1px;
 width:1px;
 overflow:hidden;
 display:none;
-}
+} !important
+
+
+/* Above is a fix to bug in wordpress that causes button clicks in most browswers to scroll page to top */
+/*	see http://core.trac.wordpress.org/ticket/23684 */
+
+.ui-button-wptb-dummy {padding:.2em .2em}
+
+.ui-button-wptb {padding:.2em .2em}
+
+.ui-slider-handle {position:absolute;z-index:1;width:1.2em;height:1.2em;cursor:default} !important
+
